# mlclient

./: .gitignore  .isort.cfg  .readthedocs.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: coverage-badge.yml  coverage-comment.yml  coverage_badge.yml  coverage_comment.yml  integration-coverage-comment.yml  integration-test.yml  lint.yml  test.yml  unit-coverage-comment.yml  unit-test.yml
cli/: __init__.py  app.py  ml_cli.py
cli/commands/: __init__.py  call_logs.py
client/: constants.py  ml_client.py  utils.py
client/rest_resources/: resource_call.py
client/rest_resources/client_api/: eval_call.py
client/rest_resources/management_api/: databases_call.py  logs_call.py
dev/: Dockerfile  Makefile  README.md  docker-compose.yaml
dev/.mlclient/: mlclient-cluster.yaml  mlclient-local-cluster.yaml  mlclient-local.yaml  mlclient-single.yaml
dev/scripts/: Makefile
docs/: conf.py  index.rst  mlclient.calls.rst  mlclient.model.rst  mlclient.rst  modules.rst
docs/_build/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/mlclient/: mlclient.rst
docs/user/: cli.rst  pythonapi.rst  setup.rst
meta/linters/: linters.json  look_for_new_linters.py
mlclient/: __init__.py  __main__.py  auth.py  connection.py  constants.py  exceptions.py  mimetypes.py  ml_client.py  ml_client_manager.py  ml_config.py  ml_environment.py  ml_manager.py  ml_profile.py  ml_resource_client.py  ml_response_parser.py  multipart.py  utils.py
mlclient/api/: __init__.py  admin_api.py  databases.py  documents.py  eval.py  forests.py  logs.py  manage_api.py  rest_api.py  roles.py  servers.py  users.py
mlclient/calls/: __init__.py  admin.py  api_call.py  clientapi.py  database_call.py  database_properties_call.py  databases.py  databases_call.py  documents.py  documents_call.py  eval.py  eval_call.py  forest_call.py  forest_properties_call.py  forests.py  forests_call.py  logs.py  logs_call.py  managementapi.py  resource_call.py  rest_call.py  role_call.py  role_properties_call.py  roles.py  roles_call.py  server_call.py  server_properties_call.py  servers.py  servers_call.py  user_call.py  user_properties_call.py  users.py  users_call.py
mlclient/cli/: __init__.py  app.py
mlclient/clients/: __init__.py  api_client.py  documents_client.py  eval_client.py  http_client.py  logs_client.py  ml_client.py  rest_client.py  restart_waiter.py
mlclient/io/: __init__.py  documents_loader.py  documents_writer.py
mlclient/jobs/: __init__.py  documents_jobs.py
mlclient/model/: __init__.py  data.py  documents.py
mlclient/models/: __init__.py  documents.py  types.py
mlclient/resources/: logging.yaml
mlclient/services/: __init__.py  documents.py  eval.py  logs.py
mlclient/structures/: __init__.py  documents.py
scripts/get-mimetypes/: get-mimetypes.py  get-mimetypes.xqy
test/client/: test_ml_client.py  test_ml_resource_client.py  test_utils.py
test/mlclient/: test_ml_client.py  test_ml_resource_client.py  test_utils.py
tests/: __init__.py  tools.py  utils.py
tests/cli/: test_ml_cli.py  test_ml_client_application.py
tests/integration/: .gitignore  Dockerfile.kdc  Dockerfile.marklogic  conftest.py  docker-compose.yaml  entrypoint.sh  step_definitions.py
tests/mlclient/: test_mimetypes.py  test_ml_client.py  test_ml_config.py  test_ml_manager.py  test_ml_resource_client.py  test_ml_resources_client.py  test_ml_response_parser.py  test_utils.py
tests/utils/: __init__.py  data.py  documents_client.py  filesystem.py  ml_mockers.py  resources.py  response_builders.py
(+559 files in other folders)
